# Quiz-API

./: pyproject.toml
core/: settings.py  urls.py
quiz/: admin.py  models.py  serializers.py  urls.py  views.py
quiz/migrations/: 0001_initial.py
